--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 html{
-  min-height: 100vh;
-  height: 100vh;
+  min-height: 100%;
+  height: 100%;
 }
 
 body {
-  min-height: 100vh;
-  height: 100vh;
+  height: 100%;
+  min-height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
