--- a/src/cellularAutomata/AutomataCell.css
+++ b/src/cellularAutomata/AutomataCell.css
@@ -1,4 +1,6 @@
 .cell{
+  position: relative;
+  background-color: #d3d3d3;
   margin-top: 50px;
   min-width: 400px;
   min-height: 400px;
@@ -16,21 +18,31 @@
 }
 
 .automatonSettings{
+  vertical-align: top;
+  min-width: 25%;
   display: inline-block;
   width: 25%;
-  height: 100%;
   outline: solid 1px yellow;
 }
 
+.settingsType{
+  margin-left: 5%;
+  margin-right: 5%;
+  outline: 1px solid black;
+  background-color: white;
+}
+
 .simulation{
-  margin-left: 1%;
-  margin-right: 1%;
-  width: 98%;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  width: 95%;
+  min-height: 100%;
   height: 100%;
   margin-top: 1%;
   margin-bottom: 0;
   display:block;
-  background-color: red;
+  background-color: white;
+  outline: 1px solid black;
 }
 
 .bottomLabel{
