--- a/src/cellularAutomata/Rules.css
+++ b/src/cellularAutomata/Rules.css
@@ -17,3 +17,16 @@
   margin-top: 0.5%;
   background-color: #ffcccb;
 }
+.squareColor{
+  margin-left: auto;
+  margin-right: auto;
+  background-color: black;
+  height: 50px;
+  width: 50px;
+}
+
+.inputRules{
+  margin-bottom: 1%;
+  display: inline-block;
+  width: 100%;
+}
