--- a/src/cellularAutomata/AutomataCell.css
+++ b/src/cellularAutomata/AutomataCell.css
@@ -8,6 +8,7 @@
   display:block;
   margin-left: 1%;
   margin-right: 1%;
+  overflow-y: hidden;
 }
 
 .automatonContainer{
@@ -24,7 +25,6 @@
   width: 25%;
   outline: solid 1px black;
   overflow-y: auto;
-  scrollbar-width: thin;
 }
 
 .rules_list{
