--- a/src/cellularAutomata/Rules.css
+++ b/src/cellularAutomata/Rules.css
@@ -30,3 +30,10 @@
   display: inline-block;
   width: 100%;
 }
+
+.colorPicker{
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin-bottom: 2.5%;
+}
